test/corpus/array_access.txt
===
nested array variable access level 1
===
|===|
array<int> matrix = [1];
|===|
[output = data]
{
  result: matrix[0],
}
---

(source_file
  (script_block
    (variable_declaration
      (array_type
        (int_type))
      (identifier
        (identifier_word))
      (array_literal
        (int_literal))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_access
        (identifier
          (identifier_word))
        (int_literal)))))

===
nested array variable access level 2
===
|===|
array<array<int>> matrix = [[1]];
|===|
[output = data]
{
  result: matrix[0][0],
}
---

(source_file
  (script_block
    (variable_declaration
      (array_type
        (array_type
          (int_type)))
      (identifier
        (identifier_word))
      (array_literal
        (array_literal
          (int_literal)))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_access
        (array_access
          (identifier
            (identifier_word))
          (int_literal))
        (int_literal)))))

===
nested array variable access level 3
===
|===|
array<array<array<int>>> matrix = [[[1]]];
|===|
[output = data]
{
  result: matrix[0][0][0],
}
---

(source_file
  (script_block
    (variable_declaration
      (array_type
        (array_type
          (array_type
            (int_type))))
      (identifier
        (identifier_word))
      (array_literal
        (array_literal
          (array_literal
            (int_literal))))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_access
        (array_access
          (array_access
            (identifier
              (identifier_word))
            (int_literal))
          (int_literal))
        (int_literal)))))

===
nested array variable access level 4
===
|===|
array<array<array<array<int>>>> matrix = [[[[1]]]];
|===|
[output = data]
{
  result: matrix[0][0][0][0],
}
---

(source_file
  (script_block
    (variable_declaration
      (array_type
        (array_type
          (array_type
            (array_type
              (int_type)))))
      (identifier
        (identifier_word))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (int_literal)))))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_access
        (array_access
          (array_access
            (array_access
              (identifier
                (identifier_word))
              (int_literal))
            (int_literal))
          (int_literal))
        (int_literal)))))

===
nested array variable access level 5
===
|===|
array<array<array<array<array<int>>>>> matrix = [[[[[1]]]]];
|===|
[output = data]
{
  result: matrix[0][0][0][0][0],
}
---

(source_file
  (script_block
    (variable_declaration
      (array_type
        (array_type
          (array_type
            (array_type
              (array_type
                (int_type))))))
      (identifier
        (identifier_word))
      (array_literal
        (array_literal
          (array_literal
            (array_literal
              (array_literal
                (int_literal))))))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (array_access
        (array_access
          (array_access
            (array_access
              (array_access
                (identifier
                  (identifier_word))
                (int_literal))
              (int_literal))
            (int_literal))
          (int_literal))
        (int_literal)))))
