test/corpus/bool_operators.txt
===
logical not operator
===
{
  result: !false,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (unary_expression
        (bang_operator)
        (boolean_literal)))))

===
less than operator
===
{
  result: 1 < 2,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (relational_expression
        (int_literal)
        (less_operator)
        (int_literal)))))

===
less than or equal operator
===
{
  result: 1 <= 2,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (relational_expression
        (int_literal)
        (less_equal_operator)
        (int_literal)))))

===
greater than operator
===
{
  result: 2 > 1,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (relational_expression
        (int_literal)
        (greater_operator)
        (int_literal)))))

===
greater than or equal operator
===
{
  result: 2 >= 1,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (relational_expression
        (int_literal)
        (greater_equal_operator)
        (int_literal)))))

===
equality operator
===
{
  result: 1 == 1,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (equality_expression
        (int_literal)
        (equal_equal_operator)
        (int_literal)))))

===
not equal operator
===
{
  result: 1 != 2,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (equality_expression
        (int_literal)
        (not_equal_operator)
        (int_literal)))))

===
logical and operator
===
{
  result: true && false,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (logical_and_expression
        (boolean_literal)
        (and_and_operator)
        (boolean_literal)))))

===
logical or operator
===
{
  result: true || false,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (logical_or_expression
        (boolean_literal)
        (or_or_operator)
        (boolean_literal)))))

===
ternary conditional operator
===
{
  result: true ? false : true,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (conditional_expression
        (boolean_literal)
        (boolean_literal)
        (boolean_literal)))))

===
combined relational operators
===
{
  result: 1 < 2 && 2 <= 3 && 3 > 2 && 4 >= 4,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (logical_and_expression
        (logical_and_expression
          (logical_and_expression
            (relational_expression
              (int_literal)
              (less_operator)
              (int_literal))
            (and_and_operator)
            (relational_expression
              (int_literal)
              (less_equal_operator)
              (int_literal)))
          (and_and_operator)
          (relational_expression
            (int_literal)
            (greater_operator)
            (int_literal)))
        (and_and_operator)
        (relational_expression
          (int_literal)
          (greater_equal_operator)
          (int_literal))))))

===
combined equality operators
===
{
  result: 1 == 1 || 1 != 2,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (logical_or_expression
        (equality_expression
          (int_literal)
          (equal_equal_operator)
          (int_literal))
        (or_or_operator)
        (equality_expression
          (int_literal)
          (not_equal_operator)
          (int_literal))))))

===
combined boolean operator precedence
===
{
  result: !false || 1 < 2 && 3 == 3 ? true : false,
}
---

(source_file
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (conditional_expression
        (logical_or_expression
          (unary_expression
            (bang_operator)
            (boolean_literal))
          (or_or_operator)
          (logical_and_expression
            (relational_expression
              (int_literal)
              (less_operator)
              (int_literal))
            (and_and_operator)
            (equality_expression
              (int_literal)
              (equal_equal_operator)
              (int_literal))))
        (boolean_literal)
        (boolean_literal)))))
