test/corpus/comments.txt
===
line comment before output block
===
// this is a line comment
{
  value: true,
}
---

(source_file
  (comment)
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (boolean_literal))))

===
block comment before output block
===
/*
this is a block comment

*/
{
  value: true,
}
---

(source_file
  (comment)
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (boolean_literal))))

===
line comment inside script block
===
|===|
// comment about the declaration
string name = "Ada";
|===|
{
  name: name,
}
---

(source_file
  (script_block
    (comment)
    (variable_declaration
      (string_type)
      (identifier
        (identifier_word))
      (string_literal)))
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (identifier
        (identifier_word)))))

===
block comment inside output block
===
{
  /*
  inline block comment
  */
  value: true,
}
---

(source_file
  (output_block
    (comment)
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (boolean_literal))))

===
line comment before output block without trailing newline
===
// line comment
{
  value: true,
}
---

(source_file
  (comment)
  (output_block
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (boolean_literal))))
