test/corpus/docs.txt
===
data output with description directive
===
[output = "data", description = """
# User Payload

This block emits user data.
"""]
{
  name: "Ada", /# The emitted user name
  age: 27, /# The emitted age
}
---

(source_file
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode))
      (description_directive
        (string_literal)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (string_literal)
      (inline_description
        (description_text)))
    (output_field
      (field_name
        (identifier
          (identifier_word)))
      (int_literal)
      (inline_description
        (description_text)))))

===
schema_doc declaration with fields metadata
===
|===|
schema_doc User {
  summary: "Represents a user",
  description: """
# User

A reusable schema.
""",
  fields: {
    name: "The user's display name",
    age: "Optional age",
  },
};

alias Status: choice["Pending"] /# Current status choice;

gen_doc Status {
  summary: "Represents a status choice",
};

alias Name: string /# A user display name;

schema User: {
  name: Name, /# The user's name
  age?: int, /# Optional age
};
|===|
[output = "schema"]
{
  user: User, /# Public user contract
}
---

(source_file
  (script_block
    (schema_doc_declaration
      (identifier
        (identifier_word))
      (schema_doc_entry
        (summary_entry
          (string_literal)))
      (schema_doc_entry
        (description_entry
          (doc_block_string)))
      (schema_doc_entry
        (fields_entry
          (field_doc_entry
            (field_name
              (identifier
                (identifier_word)))
            (string_literal))
          (field_doc_entry
            (field_name
              (identifier
                (identifier_word)))
            (string_literal)))))
    (type_declaration
      (identifier
        (identifier_word))
      (choice_type
        (choice_member
          (string_literal)))
      (inline_description
        (description_text)))
    (gen_doc_declaration
      (identifier
        (identifier_word))
      (gen_doc_entry
        (summary_entry
          (string_literal))))
    (type_declaration
      (identifier
        (identifier_word))
      (string_type)
      (inline_description
        (description_text)))
    (schema_declaration
      (identifier
        (identifier_word))
      (record_type
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (named_type
            (identifier
              (identifier_word)))
          (inline_description
            (description_text)))
        (schema_field
          (field_name
            (identifier
              (identifier_word)))
          (optional_marker)
          (int_type)
          (inline_description
            (description_text))))))
  (output_block
    (directive_list
      (output_mode_directive
        (schema_mode)))
    (output_schema_field
      (field_name
        (identifier
          (identifier_word)))
      (named_type
        (identifier
          (identifier_word)))
      (inline_description
        (description_text)))))
