test/corpus/docs_invalid.txt
===
misplaced inline description
===
|===|
type Name: string;
/# invalid placement
|===|
[output = "data"] {}
---

(source_file
  (script_block
    (type_declaration
      (identifier
        (identifier_word))
      (string_type))
    (ERROR
      (named_type
        (identifier
          (identifier_word)))
      (identifier
        (identifier_word))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))))

===
unknown schema_doc entry
===
|===|
schema_doc User {
  extra: "nope",
}
|===|
[output = "data"] {}
---

(source_file
  (script_block
    (schema_doc_declaration
      (identifier
        (identifier_word))
      (ERROR
        (identifier_word)
        (identifier_word))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))))
