test/corpus/enums.txt
===
string enum
===
|===|
enum Fruit: string {
  Apple /# Default apple,
  Strawberry = "strawberry" /# Explicit strawberry
};
|===|
[output = data]
{
  result: "Apple",
}
---

(source_file
  (script_block
    (enum_declaration
      (identifier
        (identifier_word))
      (enum_backing_type
        (string_type))
      (enum_member
        (identifier
          (identifier_word))
        (inline_description
          (description_text)))
      (enum_member
        (identifier
          (identifier_word))
        (enum_member_value
          (string_literal))
        (inline_description
          (description_text)))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (identifier
        (identifier_word))
      (string_literal))))

===
int enum
===
|===|
enum Status: int {
  Pending = 0,
  Running = 1
}
|===|
[output = data] {}
---

(source_file
  (script_block
    (enum_declaration
      (identifier
        (identifier_word))
      (enum_backing_type
        (int_type))
      (enum_member
        (identifier
          (identifier_word))
        (enum_member_value
          (int_literal)))
      (enum_member
        (identifier
          (identifier_word))
        (enum_member_value
          (int_literal)))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))))

===
enum with comments
===
|===|
enum Fruit: string {
  /= common fruit
  Apple,
  /= seasonal =/
  Strawberry = "strawberry"
}
|===|
[output = data] {}
---

(source_file
  (script_block
    (enum_declaration
      (identifier
        (identifier_word))
      (enum_backing_type
        (string_type))
      (comment)
      (enum_member
        (identifier
          (identifier_word))
        (enum_member_value
          (string_literal)))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))))

===
enum member access
===
|===|
enum Fruit: string {
  Apple,
  Strawberry = "strawberry"
}
Fruit selected = Fruit.Apple;
|===|
[output = data]
{
  selected: selected,
}
---

(source_file
  (script_block
    (enum_declaration
      (identifier
        (identifier_word))
      (enum_backing_type
        (string_type))
      (enum_member
        (identifier
          (identifier_word)))
      (enum_member
        (identifier
          (identifier_word))
        (enum_member_value
          (string_literal))))
    (variable_declaration
      (named_type
        (identifier
          (identifier_word)))
      (identifier
        (identifier_word))
      (member_access
        (identifier
          (identifier_word))
        (identifier
          (identifier_word)))))
  (output_block
    (directive_list
      (output_mode_directive
        (data_mode)))
    (output_field
      (identifier
        (identifier_word))
      (identifier
        (identifier_word)))))
